Fix "jumping" select on load (CLS)

--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ select:focus-visible {
 
 .map-select {
   display: inline-block;
-  width: 300px;
+  min-width: 300px;
   height: 50px;
   padding-right: 34px;
   padding-left: 8px;
